modules/gdscript/tests/scripts/parser/errors/struct_no_body.gd
struct Test:


func test():
    pass
